# ConciergeOS

./: .env.example  .gitignore  QUICKSTART.md  README.md  create_hotel_db.py  implementation_plan.md  pyproject.toml
.clinerules/: 01-debugging-with-temp-files.md  02-database-impact-analysis.md  03-debugging-third-party-libraries.md
Generator/: DATABASE_POPULATION.md  arabic_names.txt  devanagari_names.txt  erroneous_reservations.json  generate_names.py  generate_rooms.py  japanese_names.txt  nordic_names.txt  populate_reservations.py  populate_rooms.py  rooms.txt  run_errors.py  setup_errors.py  setup_performance_guests.py  shift_reservations.py  utils.py
PerformanceTesting/: __init__.py  batch_runners.py  db.py  executors.py  llm_client.py  manual_performance_analysis.sql  prompt_builders.py  run_performance_tests.py  settings.py  tool_executors.py
app/: config.json  config.py  db.py  db_performance.py  enums.py  main.py  models.py  schemas.py
backend/: DEVELOPMENT.md  README.md  __init__.py  export_openapi.py  openapi.json
data/: guests_data.csv  guests_data.json  guests_data.xml
docker/: .env.bak  .env.docker.example  Caddyfile.json  Dockerfile.backend  Dockerfile.frontend  Dockerfile.pytest  Dockerfile.role-sync  README.md  docker-compose-tests.yaml  docker-compose.yaml  install-cert-linux.sh  install-cert-macos.sh  install-cert-windows.ps1  keycloak_diagnose.py  keycloak_setup.py  oidc-main.toml  oidc-main.toml.example  oidc-settings.toml  rbac_routes.yaml  role_sync.py  settings.py  test_oidc_config.py  test_role_sync.py  update_oidc_secret.py
(+221 files in other folders)
