[project]
name = "conciergeos"
version = "0.1.0"
description = "Hotel concierge and reservation management system"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.2",
    "fastapi>=0.137.2",
    "openai>=2.43.0",
    "pillow>=11.3.0",
    "pydantic>=2.13.4",
    "pydub>=0.25.1",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[tool.uv.sources]
conciergeos = { path = "backend" }
